styles.css
:root {
  --primary: #13669c;
  --secondary: #5490b7;
  --background: white;
  --foreground: #404040;
  --placeholder: #808080;
  --spacing: 1rem;
  --icon-size: 4rem;
  --company-size: calc(var(--icon-size) * 2.5);
}

html {
  font-size: 18px;
}

body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: 'Roboto', sans-serif;
  background-color: var(--background);
  color: var(--foreground);
  max-width: 768px;
  min-height: 100vh;
  margin: calc(var(--spacing) * 2) auto;
}

* {
  box-sizing: border-box;
}

a {
  text-decoration: none;
}

a:hover {
  text-decoration: none;
}

#name {
  color: var(--primary);
  font-weight: bold;
  font-size: 3rem;
}

.heading-2 {
  display: inline-block;
  color: var(--secondary);
  font-size: 1.8rem;
  font-weight: bold;
  margin-bottom: var(--spacing);
  border-bottom: 4px solid var(--secondary);
}

.heading-4 {
  display: inline-block;
  font-size: 1.6rem;
  font-weight: bold;
  color: var(--placeholder);
  margin-bottom: var(--spacing);
}

img.project {
  width: 100%;
  height: auto;
}

img.thumbnail {
  display: inline-block;
  /* Keep aspect ratio */
  width: auto;
  height: var(--icon-size);
  margin-bottom: var(--spacing);
}

nav {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  margin-bottom: var(--spacing);
}

#social-medias {
  font-size: 2rem;
  margin-left: auto;
}

.placeholder-text {
  color: var(--placeholder);
  font-size: 0.85rem;
}

.my-container {
  display: flex;
  justify-content: flex-start;
  flex-wrap: wrap;
}

.my-container > * {
  margin-bottom: var(--spacing);
  margin-right: var(--spacing);
}

.skills {
  font-size: var(--icon-size);
}

.skills-img {
  display: inline-block;
  height: var(--icon-size);
  width: var(--icon-size);
  /* margin-right: var(--spacing); */
}

.companies {
  font-size: var(--company-size);
}

.companies-img {
  display: inline-block;
  /* height: var(--company-size);
  width: var(--company-size); */
  /* margin-right: var(--spacing); */
}

.gratify-logo {
  width: var(--company-size);
}

.project-container {
  text-align: center;
}

.align-self-center {
  align-self: center;
}

div.companies-spacer {
  gap: var(--icon-size);
}

footer {
  height: 64px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: var(--spacing);
}

@media only screen and (min-width: 0px) and (max-width: 575px) {
  :root {
    --company-size: calc(var(--icon-size) * 1.45);
  }

  body {
    max-width: 288px;
  }

  #name {
    font-size: 1.85rem;
  }

  .heading-2 {
    font-size: 1.45rem;
  }

  .heading-4 {
    font-size: 1.15rem;
  }

  .skills {
    font-size: 3rem;
  }

  .skills-img {
    width: 3rem;
    height: 3rem;
  }

  div.companies-spacer {
    gap: calc(var(--icon-size) / 2);
  }
}

@media only screen and (min-width: 576px) and (max-width: 767px) {
  body {
    max-width: 448px;
  }
}

@media only screen and (min-width: 768px) and (max-width: 1023px) {
  body {
    max-width: 576px;
  }
}

